Balise span & Attribute style

--- a/span.html
+++ b/span.html
@@ -1,5 +1,10 @@
 <!-- Balises Span -->
+<!-- Attribute Style -->
 
+<p>
+    Lorem ipsum dolor sit amet, <span style="font-style: italic;">consectetur adipisicing elit</span>. Voluptatibus earum 
+    necessitatibus delectus alias dolore illo consequuntur sed eius qui inventore autem asperiores suscipit, facere fugiat pariatur voluptatum maiores reprehenderit amet.
+</p>
 <p>
     Lorem ipsum dolor sit amet, <span style="font-style: italic;">consectetur adipisicing elit</span>. Voluptatibus earum 
     necessitatibus delectus alias dolore illo consequuntur sed eius qui inventore autem asperiores suscipit, facere fugiat pariatur voluptatum maiores reprehenderit amet.
