HTML Tables & Row

--- a/index.html
+++ b/index.html
@@ -1,13 +1,37 @@
 <!-- <!DOCTYPE html> Structure html -->
  
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document HTML</title>
 </head>
 <body>
-    
+    <!--Metadonnées-->
+    <header>
+        <h1>Doc HTML5</h1>
+    </header>
+    <!--Composants-->
+    <main>
+        <h2>Tableaux</h2>
+        <table>
+            <thead>
+                <tr>
+                    <th>Prénom</th>
+                    <th>Age</th>
+                    <th>Language</th>
+                </tr>
+            </thead>
+            <tbody>
+
+            </tbody>
+            <tfoot>
+
+            </tfoot>
+        </table>
+    </main>
+    <!--Signature-->
+    <footer>Doc HTML5 - 2025</footer>
 </body>
 </html>
