--- a/index.html
+++ b/index.html
@@ -15,16 +15,27 @@
     <!--Composants-->
     <main>
         <h2>Tableaux</h2>
-        <table>
+        <table border="1">
+            <!--Titres du tableau-->
             <thead>
                 <tr>
-                    <th>Prénom</th>
+                    <th>Name</th>
                     <th>Age</th>
                     <th>Language</th>
                 </tr>
             </thead>
+            <!--Informations du tableau-->
             <tbody>
-
+                <tr>
+                    <td>Sofiane</td>
+                    <td>39</td>
+                    <td>HTML5</td>
+                </tr>
+                <tr>
+                    <td>Dev-Ninja75</td>
+                    <td>39</td>
+                    <td>HTML5</td>
+                </tr>
             </tbody>
             <tfoot>
 
