Footer content in an HTML table

--- a/index.html
+++ b/index.html
@@ -7,42 +7,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document HTML</title>
 </head>
-<body>
-    <!--Metadonnées-->
-    <header>
-        <h1>Doc HTML5</h1>
-    </header>
-    <!--Composants-->
-    <main>
-        <h2>Tableaux</h2>
-        <table border="1">
-            <!--Titres du tableau-->
-            <thead>
-                <tr>
-                    <th>Name</th>
-                    <th>Age</th>
-                    <th>Language</th>
-                </tr>
-            </thead>
-            <!--Informations du tableau-->
-            <tbody>
-                <tr>
-                    <td>Sofiane</td>
-                    <td>39</td>
-                    <td>HTML5</td>
-                </tr>
-                <tr>
-                    <td>Dev-Ninja75</td>
-                    <td>39</td>
-                    <td>HTML5</td>
-                </tr>
-            </tbody>
-            <tfoot>
-
-            </tfoot>
-        </table>
-    </main>
-    <!--Signature-->
-    <footer>Doc HTML5 - 2025</footer>
-</body>
+    <body>
+        <!--Metadonnées-->
+        <header>
+            <h1>Doc HTML5</h1>
+        </header>
+        <!--Composants-->
+        <main>
+            <h2>Tableaux</h2>
+            <table border="1">
+                <!--Titres du tableau-->
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Age</th>
+                        <th>Language</th>
+                    </tr>
+                </thead>
+                <!--Informations du tableau-->
+                <tbody>
+                    <tr>
+                        <td>Sofiane</td>
+                        <td>39</td>
+                        <td>HTML5</td>
+                    </tr>
+                    <tr>
+                        <td>Dev-Ninja75</td>
+                        <td>39</td>
+                        <td>HTML5</td>
+                    </tr>
+                </tbody>
+                <!--Résumé du tableau-->
+                <tfoot>
+                    <tr>
+                        <td>2</td>
+                        <td>39</td>
+                        <td>HTML5</td>
+                    </tr>
+                </tfoot>
+            </table>
+        </main>
+        <!--Signature-->
+        <footer>Doc HTML5 - 2025</footer>
+    </body>
 </html>
