Balises section &  article

--- a/index.html
+++ b/index.html
@@ -1,53 +1,68 @@
 <!-- <!DOCTYPE html> Structure html -->
- 
+
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document HTML</title>
 </head>
-    <body>
-        <!--Metadonnées-->
-        <header>
-            <h1>Doc HTML5</h1>
-        </header>
-        <!--Composants-->
-        <main>
-            <h2>Tableaux</h2>
-            <table border="1">
-                <!--Titres du tableau-->
-                <thead>
-                    <tr>
-                        <th>Name</th>
-                        <th>Age</th>
-                        <th>Language</th>
-                    </tr>
-                </thead>
-                <!--Informations du tableau-->
-                <tbody>
-                    <tr>
-                        <td>Sofiane</td>
-                        <td>39</td>
-                        <td>HTML5</td>
-                    </tr>
-                    <tr>
-                        <td>Dev-Ninja75</td>
-                        <td>39</td>
-                        <td>HTML5</td>
-                    </tr>
-                </tbody>
-                <!--Résumé du tableau-->
-                <tfoot>
-                    <tr>
-                        <td>2</td>
-                        <td>39</td>
-                        <td>HTML5</td>
-                    </tr>
-                </tfoot>
-            </table>
-        </main>
-        <!--Signature-->
-        <footer>Doc HTML5 - 2025</footer>
-    </body>
+
+<body>
+    <!--Metadonnées-->
+    <header>
+        <h1>Doc HTML5</h1>
+    </header>
+    <!--Composants-->
+    <main>
+    <!--Section & Article-->    
+        <section>
+            <h2>Introduction</h2>
+            <article>
+                <h3>Back to the classics !</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur ut numquam quos earum corporis consectetur enim accusamus vero, laboriosam saepe quae nostrum, maiores quo debitis doloremque voluptatibus id ab officia!</p>
+                <p>
+                    <strong>This is HyperText Markup Language</strong>
+                </p>
+            </article>
+        </section>
+    <!--Table-->
+        <h2>Tableaux</h2>
+        <table border="1">
+        <!--Titres du tableau-->
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Age</th>
+                    <th>Language</th>
+                </tr>
+            </thead>
+        <!--Informations du tableau-->
+            <tbody>
+                <tr>
+                    <td>Sofiane</td>
+                    <td>39</td>
+                    <td>HTML5</td>
+                </tr>
+                <tr>
+                    <td>Dev-Ninja75</td>
+                    <td>39</td>
+                    <td>HTML5</td>
+                </tr>
+            </tbody>
+        <!--Résumé du tableau-->
+            <tfoot>
+                <tr>
+                    <td>2</td>
+                    <td>39</td>
+                    <td>HTML5</td>
+                </tr>
+            </tfoot>
+        </table>
+    </main>
+    <!--Signature-->
+    <footer>Doc HTML5 - 2025</footer>
+</body>
+
 </html>
