Signature footer tag

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </table>
     </main>
     <!--Signature-->
-    <footer>Doc HTML5 - 2025</footer>
+    <footer>Doc HTML5 - Paris 2025 Dev-Ninja75 ♥</footer>
 </body>
 
 </html>
