Balise nav, set of navigation links & sections

--- a/index.html
+++ b/index.html
@@ -13,6 +13,21 @@
     <!--Metadonnées-->
     <header>
         <h1>Doc HTML5</h1>
+        <!--Navigation-->
+        <nav>
+            <ul>
+                <li><a href="a.html">Balise anchor a</a></li>
+                <li><a href="div.html">Balise div Divisions</a></li>
+                <li><a href="form.html">Balise form Formulaires</a></li>
+                <li><a href="headings.html">Balise h Headers & En-têtes</a></li>
+                <li><a href="img.html">Balise img, sources & attributes Image</a></li>
+                <li><a href="input.html">Balise input & attributes, Saisie formulaires</a></li>
+                <li><a href="lists.html">Balises ul ol & li Unordered & Ordered Lists</a></li>
+                <li><a href="p.html">Balises p Paragraphe</a></li>
+                <li><a href="span.html">Balise span & Attribute Style, sélection Text</a></li>
+                <li><a href="strong.em.html">Balises strong & em, Bold & Italic Text</a></li>
+            </ul>
+        </nav>
     </header>
     <!--Composants-->
     <main>
