Add footer social media

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <!--Navigation-->
         <nav>
             <ul>
-                <li><a href="a.html">Balise anchor a</a></li>
+                <li><a href="a.html">Balise a Anchor</a></li>
                 <li><a href="div.html">Balise div Divisions</a></li>
                 <li><a href="form.html">Balise form Formulaires</a></li>
                 <li><a href="headings.html">Balise h Headers & En-têtes</a></li>
@@ -77,7 +77,22 @@
         </table>
     </main>
     <!--Signature-->
-    <footer>Doc HTML5 - Paris 2025 Dev-Ninja75 ♥</footer>
+    <footer>
+        <div>
+            <h5>Find me on Social Media</h5>
+            <ol>
+                <li>
+                    <a href="https://github.com/Dev-Ninja75">Github</a>
+                </li>
+                <li>
+                    <a href="linkedin.com/in/sofiane-abdedou">Linkedin</a>
+                </li>
+            </ol>
+        </div>
+            <span style="font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">
+                HTML5 - Paris 2025 Dev-Ninja75 ♥
+            </span>
+    </footer>
 </body>
 
 </html>
