Balise textarea text editor

--- a/index.html
+++ b/index.html
@@ -75,6 +75,18 @@
                 </tr>
             </tfoot>
         </table>
+        <section>
+        <!--Espace texte et commentaires-->
+            <h2>Input texte & commentaires</h2>
+            <input type="text" value="Dev-Ninja75">
+            <br/>
+            <br/>
+            <textarea rows="5" cols="50" placeholder="Commentaires"></textarea>
+        </section>
+        <section>
+            <h2>Astuce Python</h2>
+            <code>print("Merci")</code>
+        </section>
     </main>
     <!--Signature-->
     <footer>
