Attributes Class . & ID # Add Buttons

--- a/index.html
+++ b/index.html
@@ -80,12 +80,18 @@
             <h2>Input texte & commentaires</h2>
             <input type="text" value="Dev-Ninja75">
             <br/>
-            <br/>
+            <br/>          
             <textarea rows="5" cols="50" placeholder="Commentaires"></textarea>
         </section>
         <section>
+        <!--Astuce Python-->
             <h2>Astuce Python</h2>
             <code>print("Merci")</code>
+        </section>
+        <section>
+            <h2>Boutons</h2>
+            <div class="bouton" id="bouton-1">Bouton 1</div>
+            <div class="bouton" id="bouton-2">Bouton 2</div>
         </section>
     </main>
     <!--Signature-->
