Balise Style add CSS to Head

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document HTML</title>
+    <style>
+        .bouton {
+            background-color: lightseagreen;
+            color: whitesmoke;
+            padding: 10px;
+            border-radius: 5px;
+            display: inline;
+        }
+    </style>
 </head>
 
 <body>
