Balise script add pop-up JavaScript

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document HTML</title>
+    <!--Style par class & id attributes-->
     <style>
         .bouton {
             background-color: lightseagreen;
@@ -15,7 +16,14 @@
             border-radius: 5px;
             display: inline;
         }
+        #bouton-1 {
+            background-color: coral;
+        }
     </style>
+    <!--Pop-up JavaScript-->
+    <script>
+        alert ("Welcom back   \ud83e\udd77")
+    </script>
 </head>
 
 <body>
