Balise link, importation fichier externe

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document HTML</title>
+    <!--Balise link & CSS-->
+    <link rel="stylesheet" href="styles.css"/>
     <!--Style par class & id attributes-->
     <style>
         .bouton {
@@ -128,6 +130,8 @@
                 HTML5 - Paris 2025 Dev-Ninja75 ♥
             </span>
     </footer>
+    <!--Pop-up JavaScript externe-->
+    <script src="main.js"></script>
 </body>
 
 </html>
