--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <title>Document HTML</title>
     <!--Balise link & CSS-->
     <link rel="stylesheet" href="styles.css"/>
+    <!--Favicon icon onglet-->
+    <link rel="icon" href="IconHTML.ico">
     <!--Style par class & id attributes-->
     <style>
         .bouton {
