Add illustration .png to Introduction

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     <!--Section & Article-->    
         <section>
             <h2>Introduction</h2>
+            <img src="html.png" width="150" alt="illustration"/>
             <article>
                 <h3>Back to the classics !</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur ut numquam quos earum corporis consectetur enim accusamus vero, laboriosam saepe quae nostrum, maiores quo debitis doloremque voluptatibus id ab officia!</p>
